update policy routine result page

--- a/policy-routine-results.html
+++ b/policy-routine-results.html
@@ -429,7 +429,8 @@
 
                                             </div>
                                             <div class="col-lg-9">
-                                                <div class="white-bg  border-theme inner-tab-content-right-col p-2">
+                                                <div
+                                                    class="white-bg  border-theme inner-tab-content-right-col p-2 pb-3">
                                                     <div class="policy-right-part">
                                                         <div class="right-party-row">
                                                             <div class="title-row-part">MAIN</div>
@@ -439,7 +440,7 @@
                                                                         <img src="images/deploy-software-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Deploy Software</p>
+                                                                        <p class="item-device-name">Deploy Software</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -456,7 +457,7 @@
                                                                         <img src="images/notify-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Notify</p>
+                                                                        <p class="item-device-name">Notify</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -473,7 +474,7 @@
                                                                         <img src="images/play-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Run Command</p>
+                                                                        <p class="item-device-name">Run Command</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -496,7 +497,7 @@
                                                                         <img src="images/deploy-software-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Deploy Software</p>
+                                                                        <p class="item-device-name">Deploy Software</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -513,7 +514,7 @@
                                                                         <img src="images/notify-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Notify</p>
+                                                                        <p class="item-device-name">Notify</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -537,7 +538,7 @@
                                                                         <img src="images/deploy-software-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Deploy Software</p>
+                                                                        <p class="item-device-name">Deploy Software</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -561,7 +562,7 @@
                                                                         <img src="images/deploy-software-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Deploy Software</p>
+                                                                        <p class="item-device-name">Deploy Software</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -578,7 +579,7 @@
                                                                         <img src="images/deploy-software-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Deploy Software</p>
+                                                                        <p class="item-device-name">Deploy Software</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
@@ -595,7 +596,7 @@
                                                                         <img src="images/deploy-software-icon.png" />
                                                                     </div>
                                                                     <div class="item-details-div">
-                                                                        <p>Deploy Software</p>
+                                                                        <p class="item-device-name">Deploy Software</p>
                                                                         <p class="mt-4">Action Description</p>
                                                                         <h3 class="mb-3">Deploy XYZ Software</h3>
 
