--- a/policy-routine-results.html
+++ b/policy-routine-results.html
@@ -240,7 +240,7 @@
                         <div class="menu-img active policy-icon">
 
                         </div>
-                        <a href="#" class="active-menu-text">Policy Center</a>
+                        <a href="#" class="active-menu-text" style="font-size: 11.5px;">Policy Center</a>
                         <ul class="header-submenu">
                             <li><a href="#">SubMenu 2</a></li>
                             <li><a href="#">SubMenu 3</a></li>
@@ -274,7 +274,7 @@
                         </ul>
 
                     </li>
-                    <!-- <li>
+                    <li>
                         <div class="menu-img analytic-icon">
 
                         </div>
@@ -287,7 +287,7 @@
                             <li><a href="#">SubMenu 5</a></li>
                         </ul>
 
-                    </li> -->
+                    </li>
                     <li>
                         <div class="menu-img admin-icon">
 
