sampleweb page update

--- a/sample-web.html
+++ b/sample-web.html
@@ -33,7 +33,7 @@
         .top-img {
             margin: 0px auto;
             text-align: center;
-            background: url(images/Website-hero-v2.gif) no-repeat;
+            background: url(images/Website-hero-v2.gif) no-repeat center center;
             background-size: cover;
             min-height: 897px;
             height: 100vh;
@@ -43,7 +43,7 @@
             margin: 0px auto;
             text-align: center;
             background: url(images/Website--vInventa--bottom.png) no-repeat;
-            background-size: cover;
+            background-size: 100%;
             min-height: 7900px;
             height: 100vh;
         }
