--- a/sample-web.html
+++ b/sample-web.html
@@ -31,20 +31,21 @@
 
     <style>
         .top-img {
-            margin: 0px auto;
+            /* margin: 0px auto; */
+            width: 100%;
             text-align: center;
-            /* background: url(images/Website-hero-v2.gif) no-repeat center center; */
-            background-size: 100%;
-            /* min-height: 897px; */
-            /* height: 100vh; */
+            background: url(images/Website-hero-v2.gif) no-repeat center center;
+            background-size: cover;
+            /* min-height: 897px;
+            height: 100vh; */
         }
 
         .bottom-img {
             margin: 0px auto;
             text-align: center;
-            /* background: url(images/Website--vInventa--bottom.png) no-repeat; */
+            background: url(images/Website--vInventa--bottom.png) no-repeat;
             background-size: 100%;
-            /* min-height: 7900px; */
+            min-height: 7900px;
             height: 100vh;
         }
     </style>
@@ -64,11 +65,11 @@
 
                 <div class="col-lg-12 center p-0">
                     <div class="top-img">
-                        <img src="images/Website-hero-v2.gif" />
+                        <!-- <img src="images/Website-hero-v2.gif" /> -->
                     </div>
                     <div class="bottom-img">
 
-                        <img src="images/Website--vInventa--bottom.png" />
+                        <!-- <img src="images/Website--vInventa--bottom.png" /> -->
                     </div>
 
                 </div>
