--- a/sample-web.html
+++ b/sample-web.html
@@ -36,8 +36,8 @@
             text-align: center;
             background: url(images/Website-hero-v2.gif) no-repeat center center;
             background-size: cover;
-            /* min-height: 897px;
-            height: 100vh; */
+            min-height: 897px;
+            height: 100vh;
         }
 
         .bottom-img {
