--- a/advance-config.html
+++ b/advance-config.html
@@ -299,7 +299,7 @@
                             <div class="section-wrapper adapter-config-wrapper">
                                 <div class="page-heading-with-device-list-btn">
                                     <div class="page-heading">
-                                        Advance Configuration &gt;
+                                        Connectors &gt;
                                         <div class="breadcumb-flex">
                                             <div class="page-heading-breadcrumb">
                                                 <a href=""> Amazon Web Services > </a> Advance Configuration
