--- a/advance-config.html
+++ b/advance-config.html
@@ -635,14 +635,14 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col text-right mt-3">
+                                            <!-- <div class="col text-right mt-3">
                                                 <div class="add-edit-connection-bottom-btn">
                                                     <button type="button"
                                                         class="theme-button-small graydient-primary-btn">
                                                         Save Configuration
                                                     </button>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -841,14 +841,14 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col text-right mt-3">
+                                            <!-- <div class="col text-right mt-3">
                                                 <div class="add-edit-connection-bottom-btn">
                                                     <button type="button"
                                                         class="theme-button-small graydient-primary-btn">
                                                         Save Configuration
                                                     </button>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -906,15 +906,19 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col text-right mt-3">
-                                                <div class="add-edit-connection-bottom-btn">
-                                                    <button type="button"
-                                                        class="theme-button-small graydient-primary-btn">
-                                                        Save Configuration
-                                                    </button>
-                                                </div>
-                                            </div>
+
                                         </div>
+                                    </div>
+
+                                </div>
+                                <div class="col text-right mt-4">
+                                    <div class="add-edit-connection-bottom-btn mr-0 policy-btns-wrapper">
+                                        <button type="button" class="cancel-btn">
+                                            Cancel
+                                        </button>
+                                        <button type="button" class="theme-button-small graydient-primary-btn">
+                                            Save Configuration
+                                        </button>
                                     </div>
                                 </div>
                             </div>
