--- a/advance-config.html
+++ b/advance-config.html
@@ -916,6 +916,9 @@
                                         <button type="button" class="cancel-btn">
                                             Cancel
                                         </button>
+                                        <button type="button" class="theme-button-small graydient-secondary-btn">
+                                            Save
+                                        </button>
                                         <button type="button" class="theme-button-small graydient-primary-btn">
                                             Save Configuration
                                         </button>
