--- a/advance-config.html
+++ b/advance-config.html
@@ -917,7 +917,7 @@
                                             Cancel
                                         </button>
                                         <button type="button" class="theme-button-small graydient-secondary-btn">
-                                            Save
+                                            Secondary Button
                                         </button>
                                         <button type="button" class="theme-button-small graydient-primary-btn">
                                             Save Configuration
