--- a/index.html
+++ b/index.html
@@ -233,10 +233,9 @@
                     </tr>
                     <tr>
                       <td>Advance Connector</td>
-                      <td><a href="../advance-config.html" data-toggle="modal" data-target="#exampleModal">Html</a></td>
+                      <td><a href="#" data-toggle="modal" data-target="#exampleModal">Html</a></td>
 
-                      <td><a href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/424724839"
-                          target="_blank">Design</a>
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/413712410_Add-Connections" target="_blank">Design</a>
                       </td>
                     </tr>
 
