--- a/backend/index.html
+++ b/backend/index.html
@@ -232,8 +232,8 @@
                       </td>
                     </tr>
                     <tr>
-                      <td>Advance Connector</td>
-                      <td><a href="../advance-config.html" data-toggle="modal" data-target="#exampleModal">Html</a></td>
+                      <td>Advance Configuration</td>
+                      <td><a href="../advance-config.html">Html</a></td>
 
                       <td><a href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/424724839"
                           target="_blank">Design</a>
