--- a/backend/index.html
+++ b/backend/index.html
@@ -235,7 +235,7 @@
                       <td>Advance Configuration</td>
                       <td><a href="../advance-config.html">Html</a></td>
 
-                      <td><a href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/424724839"
+                      <td><a href="https://invis.io/X3WVS9PHC8G#/424724837_Connectors_-_Connector_Settings"
                           target="_blank">Design</a>
                       </td>
                     </tr>
