--- a/advance-config.html
+++ b/advance-config.html
@@ -629,7 +629,29 @@
                                                             <div class="label-div">
                                                                 Run as a real-time adapter
                                                             </div>
+                                                            
 
+                                                        </div>
+                                                    </div>
+                                                    <div>
+                                                        <h3 class="mb-2">Discovery Cycle <span>(Optional)</span></h3>
+                                                        <div class="checkbox-with-text-row">
+                                                            <div><input type="radio" /></div>
+                                                            <div class="label-div mr-3 mb-3">
+                                                                Daily
+                                                            </div>
+                                                            <div><input type="radio" /></div>
+                                                            <div class="label-div mr-3 mb-3">
+                                                                Weekly
+                                                            </div>
+                                                            <div><input type="radio" /></div>
+                                                            <div class="label-div mb-3">
+                                                                Monthly
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label>Value</label>
+                                                            <input type="text" class="form-control" placeholder="" />
                                                         </div>
                                                     </div>
                                                 </div>
