--- a/advance-config.html
+++ b/advance-config.html
@@ -633,18 +633,18 @@
 
                                                         </div>
                                                     </div>
-                                                    <div>
+                                                    <div class="field-section">
                                                         <h3 class="mb-2">Discovery Cycle <span>(Optional)</span></h3>
                                                         <div class="checkbox-with-text-row">
-                                                            <div><input type="radio" /></div>
+                                                            <div><input type="radio" name="a" value="a" /></div>
                                                             <div class="label-div mr-3 mb-3">
                                                                 Daily
                                                             </div>
-                                                            <div><input type="radio" /></div>
+                                                            <div><input type="radio" name="a" value="b" /></div>
                                                             <div class="label-div mr-3 mb-3">
                                                                 Weekly
                                                             </div>
-                                                            <div><input type="radio" /></div>
+                                                            <div><input type="radio" name="a" value="c" /></div>
                                                             <div class="label-div mb-3 ">
                                                                 Monthly
                                                             </div>
