--- a/advance-config.html
+++ b/advance-config.html
@@ -236,6 +236,148 @@
             </div>
 
             <div class="header-icons">
+
+                <div class="dropdown">
+                    <a href="#" class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <img src="images/notification.svg" />
+                        <span class="notification-red-circle">3</span>
+                    </a>
+
+                    <div class="dropdown-menu notification-dropdow-div" aria-labelledby="dropdownMenuButton">
+                        <ul class="dropdown-menu1">
+                            <li class="head text-light">
+                              <div class="row">
+                                <div class="col-lg-12 col-sm-12 col-12">
+                                  <span>Notifications (3)</span>
+                                  <a href="" class="float-right text-light">View All</a>
+                                </div>
+                            </li>
+                            <div class="notifi-scroll">
+
+                            
+                            <li class="notification-box">
+                              <div class="row-info">
+                                <div class="text-center">
+                                  <div class="c-red">&nbsp;</div>
+                                    <!-- <img src="/demo/man-profile.jpg" class="w-50 rounded-circle"> -->
+                                </div>    
+                                <div class="flex-1">
+                                  <strong class="text-info">Amazon Web Services (AWS)</strong>
+                                  <div class="subline-text">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                  </div>
+                                </div>
+                                <div> <small class="">1 hr ago</small></div>    
+                              </div>
+                            </li>
+                            <li class="notification-box">
+                              <div class="row-info">
+                                <div class=" text-center">
+                                    <div class="c-red">&nbsp;</div>
+                                </div>    
+                                <div class="flex-1">
+                                  <strong class="text-info">CylancePROTANE</strong>
+                                  <div class="subline-text">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                  </div>
+                                  
+                                </div> 
+                                <div> <small class="">5 hr ago</small></div>    
+                              </div>
+                            </li>
+                            <li class="notification-box">
+                              <div class="row-info">
+                                <div class="text-center">
+                                    <div class="c-red">&nbsp;</div>
+                                </div>    
+                                <div class="flex-1">
+                                  <strong class="text-info">CrowdStrike Falcon</strong>
+                                  <div class="subline-text">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                  </div>
+                                </div>    
+                                <div> <small class="">6 hr ago</small></div> 
+                              </div>
+                            </li>
+                            <li class="notification-box">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              </div>
+                            <!-- <li class="footer bg-dark text-center">
+                              <a href="" class="text-light">View All</a>
+                            </li> -->
+                          </ul>
+                    </div>
+                </div>
+
                 <div class="dropdown">
                     <a href="#" class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
