--- a/advance-config.html
+++ b/advance-config.html
@@ -300,7 +300,7 @@
                                 <div> <small class="">6 hr ago</small></div> 
                               </div>
                             </li>
-                            <li class="notification-box">
+                            <li class="notification-box notification-box-gray">
                                 <div class="row-info">
                                   <div class="text-center">
                                       <div class="c-gray">&nbsp;</div>
