--- a/advance-config.html
+++ b/advance-config.html
@@ -259,7 +259,7 @@
                             <li class="notification-box">
                               <div class="row-info">
                                 <div class="text-center">
-                                  <div class="c-red">&nbsp;</div>
+                                  <div class="c-red-notification">&nbsp;</div>
                                     <!-- <img src="/demo/man-profile.jpg" class="w-50 rounded-circle"> -->
                                 </div>    
                                 <div class="flex-1">
@@ -274,7 +274,7 @@
                             <li class="notification-box">
                               <div class="row-info">
                                 <div class=" text-center">
-                                    <div class="c-red">&nbsp;</div>
+                                    <div class="c-red-notification">&nbsp;</div>
                                 </div>    
                                 <div class="flex-1">
                                   <strong class="text-info">CylancePROTANE</strong>
@@ -289,7 +289,7 @@
                             <li class="notification-box">
                               <div class="row-info">
                                 <div class="text-center">
-                                    <div class="c-red">&nbsp;</div>
+                                    <div class="c-red-notification">&nbsp;</div>
                                 </div>    
                                 <div class="flex-1">
                                   <strong class="text-info">CrowdStrike Falcon</strong>
@@ -303,7 +303,7 @@
                             <li class="notification-box notification-box-gray">
                                 <div class="row-info">
                                   <div class="text-center">
-                                      <div class="c-gray">&nbsp;</div>
+                                      <div class="c-gray-notification">&nbsp;</div>
                                   </div>    
                                   <div class="flex-1">
                                     <strong class="text-info">CrowdStrike Falcon</strong>
@@ -317,7 +317,7 @@
                               <li class="notification-box notification-box-gray">
                                 <div class="row-info">
                                   <div class="text-center">
-                                      <div class="c-gray">&nbsp;</div>
+                                      <div class="c-gray-notification">&nbsp;</div>
                                   </div>    
                                   <div class="flex-1">
                                     <strong class="text-info">CrowdStrike Falcon</strong>
@@ -331,7 +331,7 @@
                               <li class="notification-box notification-box-gray">
                                 <div class="row-info">
                                   <div class="text-center">
-                                      <div class="c-gray">&nbsp;</div>
+                                      <div class="c-gray-notification">&nbsp;</div>
                                   </div>    
                                   <div class="flex-1">
                                     <strong class="text-info">CrowdStrike Falcon</strong>
@@ -345,7 +345,7 @@
                               <li class="notification-box notification-box-gray">
                                 <div class="row-info">
                                   <div class="text-center">
-                                      <div class="c-gray">&nbsp;</div>
+                                      <div class="c-gray-notification">&nbsp;</div>
                                   </div>    
                                   <div class="flex-1">
                                     <strong class="text-info">CrowdStrike Falcon</strong>
@@ -359,7 +359,7 @@
                               <li class="notification-box notification-box-gray">
                                 <div class="row-info">
                                   <div class="text-center">
-                                      <div class="c-gray">&nbsp;</div>
+                                      <div class="c-gray-notification">&nbsp;</div>
                                   </div>    
                                   <div class="flex-1">
                                     <strong class="text-info">CrowdStrike Falcon</strong>
