--- a/advance-config.html
+++ b/advance-config.html
@@ -249,7 +249,7 @@
                             <li class="head text-light">
                               <div class="row">
                                 <div class="col-lg-12 col-sm-12 col-12">
-                                  <span>Notifications (3)</span>
+                                  <span><strong>Notifications (12)</strong></span>
                                   <a href="" class="float-right text-light">View All</a>
                                 </div>
                             </li>
@@ -301,6 +301,76 @@
                               </div>
                             </li>
                             <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray-notification">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray-notification">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray-notification">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray-notification">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
+                                <div class="row-info">
+                                  <div class="text-center">
+                                      <div class="c-gray-notification">&nbsp;</div>
+                                  </div>    
+                                  <div class="flex-1">
+                                    <strong class="text-info">CrowdStrike Falcon</strong>
+                                    <div class="subline-text">
+                                      Lorem ipsum dolor sit amet, consectetur
+                                    </div>
+                                  </div>    
+                                  <div> <small class="">6 hr ago</small></div> 
+                                </div>
+                              </li>
+                              <li class="notification-box notification-box-gray">
                                 <div class="row-info">
                                   <div class="text-center">
                                       <div class="c-gray-notification">&nbsp;</div>
