--- a/notification-header.html
+++ b/notification-header.html
@@ -99,9 +99,9 @@
                 </li>
                 <li class="pushy-link">
                     <a href="#">
-                        <div class="menu-img active connectors-icon"></div>
+                        <div class="menu-img connectors-icon"></div>
 
-                        <div class="active-menu-text">
+                        <div class="">
                             Connectors
                         </div>
                     </a>
@@ -202,8 +202,8 @@
                         </ul>
                     </li>
                     <li>
-                        <div class="menu-img active connectors-icon"></div>
-                        <a href="#" class="active-menu-text">Connectors</a>
+                        <div class="menu-img  connectors-icon"></div>
+                        <a href="#" class="">Connectors</a>
                         <ul class="header-submenu">
                             <li><a href="#">SubMenu 2</a></li>
                             <li><a href="#">SubMenu 3</a></li>
