--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                       <td><a href="https://invis.io/X3WVS9PHC8G#/413712185_Dashboard" target="_blank">Design</a></td>
                     </tr>
                     <tr>
-                      <td>Notification Icon</td>
-                      <td><a href="notification-icon.html" target="_blank">Html</a></td>
+                      <td>Notification Header</td>
+                      <td><a href="notification-header.html" target="_blank">Html</a></td>
 
                       <td><a href="#" target="_blank">Design</a></td>
                     </tr>
