scroll bar issue fixed

--- a/notification-header.html
+++ b/notification-header.html
@@ -253,7 +253,7 @@
                                         <a href="" class="float-right text-light">View All</a>
                                     </div>
                             </li>
-                            <div class="notifi-scroll">
+                            <div class="notifi-scroll" id="scroll">
 
 
                                 <li class="notification-box">
