--- a/notification-header.html
+++ b/notification-header.html
@@ -255,8 +255,8 @@
                                 </div>
                             </div>
 
-                            <ul id="scroll">
-                                <div class="notifi-scroll">
+                            <ul id="scroll" class="notifi-scroll">
+                                <div>
 
                                     <li class="notification-box">
                                         <div class="row-info">
