--- a/backend/index.html
+++ b/backend/index.html
@@ -90,7 +90,9 @@
                       <td>Notification Header</td>
                       <td><a href="../notification-header.html" target="_blank">Html</a></td>
 
-                      <td><a href="#" target="_blank">Design</a></td>
+                      <td><a
+                          href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/425227052_Notification-V2-2"
+                          target="_blank">Design</a></td>
                     </tr>
                   </tbody>
                 </table>
