--- a/notification-lists.html
+++ b/notification-lists.html
@@ -93,9 +93,9 @@
 
                 <li class="pushy-link">
                     <a href="#">
-                        <div class="menu-img active devices-icon">
+                        <div class="menu-img  devices-icon">
                         </div>
-                        <div class="active-menu-text">
+                        <div>
                             Devices
                         </div>
                     </a>
@@ -218,10 +218,10 @@
 
                     </li>
                     <li>
-                        <div class="menu-img  active devices-icon">
+                        <div class="menu-img devices-icon">
 
                         </div>
-                        <a href="#" class="active-menu-text">Devices</a>
+                        <a href="#">Devices</a>
 
                         <ul class="header-submenu">
                             <li><a href="#">SubMenu 2</a></li>
