--- a/notification-model.html
+++ b/notification-model.html
@@ -122,10 +122,11 @@
 
 
 
-                        <div class="adding-adapter-wrapper modal-query-wizard-wrapper modal-add-connections-wrapper">
+                        <div
+                            class="adding-adapter-wrapper modal-query-wizard-wrapper modal-add-connections-wrapper notification-main-wrapper">
 
 
-                            <div class="adding-adapter-modal-header pt-4 pb-4">
+                            <div class="adding-adapter-modal-header notification-model-header">
 
                                 <div class="adapter-modal-name">
                                     Notification Label Gose Here
@@ -150,7 +151,7 @@
                             <div class="adapter-modal-content-box Notification-model-wrapper" id="scroll">
 
                                 <div class="model-header-div">
-                                    <p>Process Name Goes Here</p>
+                                    <p><strong>Process Name Goes Here</strong></p>
                                     <p class="time-date-notify">Jul 15, 2020 &nbsp;&nbsp;&nbsp;5:18:44 AM</p>
                                 </div>
 
