--- a/backend/index.html
+++ b/backend/index.html
@@ -94,6 +94,18 @@
                           href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/425227052_Notification-V2-2"
                           target="_blank">Design</a></td>
                     </tr>
+                    <tr>
+                      <td>Notification Lists</td>
+                      <td><a href="../notification-lists.html" target="_blank">Html</a></td>
+
+                      <td><a href="#" target="_blank">Design</a></td>
+                    </tr>
+                    <tr>
+                      <td>Notification Model</td>
+                      <td><a href="../notification-model.html" target="_blank">Html</a></td>
+
+                      <td><a href="#" target="_blank">Design</a></td>
+                    </tr>
                   </tbody>
                 </table>
 
