--- a/notification-lists.html
+++ b/notification-lists.html
@@ -396,9 +396,8 @@
                             <div class="dashboard-top-section-query">
 
                                 <div class="search-wrap">
-                                    <input type="text"
-                                        placeholder="Insert your query or start typing to filter recent Queries"
-                                        class="search-field" style="border-radius: 4px;">
+                                    <input type="text" placeholder="Search Notification" class="search-field"
+                                        style="border-radius: 4px;">
                                     <!-- 
                                     <a href="#" class="search-query-dropdown-btn">
                                         <img src="images/down-arrow.svg">
