--- a/backend/index.html
+++ b/backend/index.html
@@ -98,13 +98,17 @@
                       <td>Notification Lists</td>
                       <td><a href="../notification-lists.html" target="_blank">Html</a></td>
 
-                      <td><a href="#" target="_blank">Design</a></td>
+                      <td><a
+                          href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/425530367_Notification-List"
+                          target="_blank">Design</a></td>
                     </tr>
                     <tr>
                       <td>Notification Model</td>
                       <td><a href="../notification-model.html" target="_blank">Html</a></td>
 
-                      <td><a href="#" target="_blank">Design</a></td>
+                      <td><a
+                          href="https://projects.invisionapp.com/share/X3WVS9PHC8G#/screens/425530366_Notification-Detail"
+                          target="_blank">Design</a></td>
                     </tr>
                   </tbody>
                 </table>
