--- a/login.html
+++ b/login.html
@@ -60,17 +60,17 @@
           <div id="wrapper" class="LoginPanel">
             <span><img src="images/logo.svg" class="img-responsive" alt="Login Logo" /></span>
             <h1>Login </h1>
-            <h3>Welcome to vinvanta</h3>
+            <h3>Welcome to vInventa</h3>
             <div class="fieldsSection">
               <form action="manage-app-users.html" id="LoginForm">
                 <!-- <h3>Login</h3>-->
                 <label>User Name</label>
-                <input type="text" class="userName" placeholder="User Name">
+                <input type="text" class="userName" placeholder="">
 
 
                 <div class="login-pass-div">
                   <label>Password</label>
-                  <input type="password" class="password" placeholder="Password">
+                  <input type="password" class="password" placeholder="">
                   <div>
                     <input type="checkbox" name="show_password" id="showpassord">
                     <label for="showpassord" class="show-password-icon">&nbsp;</label>
@@ -79,14 +79,14 @@
 
 
 
-                <div class="fieldsBotSection cf">
-                  <div class="fl remember">
+                <div class="fieldsBotSection cf mt-3">
+                  <!-- <div class="fl remember">
                     <input type="checkbox" name="loginRemember" id="remember">
                     <label for="remember">Remember Me</label>
-                  </div>
-                  <!-- <div class="fr">
-                    <a href="#" class="forgotLink"><strong>Forgot Password</strong></a>
                   </div> -->
+                  <div class="fr mb-4">
+                    <a href="#" class="forgotLink">Forgot Password</a>
+                  </div>
                 </div>
                 <input type="submit" value="Login" class="Btn cf">
                 <div class="text-c or-login-div">
