--- a/login.html
+++ b/login.html
@@ -79,12 +79,12 @@
 
 
 
-                <div class="fieldsBotSection cf mt-1">
+                <div class="fieldsBotSection cf">
                   <!-- <div class="fl remember">
                     <input type="checkbox" name="loginRemember" id="remember">
                     <label for="remember">Remember Me</label>
                   </div> -->
-                  <div class="fr mb-4">
+                  <div class="fr mb-5">
                     <a href="#" class="forgotLink">Forgot Password</a>
                   </div>
                 </div>
