--- a/notification-lists.html
+++ b/notification-lists.html
@@ -396,8 +396,7 @@
                             <div class="dashboard-top-section-query">
 
                                 <div class="search-wrap">
-                                    <input type="text" placeholder="Search Notification" class="search-field"
-                                        style="border-radius: 4px;">
+                                    <input type="text" placeholder="Search Notification" class="search-field">
                                     <!-- 
                                     <a href="#" class="search-query-dropdown-btn">
                                         <img src="images/down-arrow.svg">
@@ -455,13 +454,13 @@
                                                             <th>
                                                                 <input type="checkbox" class="hidden">
                                                             </th>
-                                                            <th class="bold-heading" style="color: #4C4C4C;">Date</th>
-                                                            <th class="bold-heading" style="color: #4C4C4C;">Time</th>
-                                                            <th class="bold-heading" style="color: #4C4C4C;">Process
+                                                            <th class="bold-heading">Date</th>
+                                                            <th class="bold-heading">Time</th>
+                                                            <th class="bold-heading">Process
                                                             </th>
-                                                            <th class="bold-heading" style="color: #4C4C4C;">Process
+                                                            <th class="bold-heading">Process
                                                                 Name</th>
-                                                            <th class="bold-heading" style="color: #4C4C4C;">
+                                                            <th class="bold-heading">
                                                                 Notification Lable</th>
                                                         </tr>
 
