--- a/policy-center.html
+++ b/policy-center.html
@@ -426,7 +426,7 @@
                                         </div> -->
 
                                         <div>
-                                            <button type="button" class="theme-button-small graydient-primary-btn">
+                                            <button type="button" class="theme-btn graydient-primary-btn">
                                                 Search
                                             </button>
                                         </div>
@@ -440,13 +440,12 @@
                                     <div class="add-edit-connection-btns">
                                         <!-- <a href="#">Advanced Settings</a> -->
                                         <div>
-                                            <button type="button"
-                                                class="theme-button-small theme-btn graydient-secondary-btn">
+                                            <button type="button" class="theme-btn graydient-secondary-btn">
                                                 + New Policy
                                             </button>
                                         </div>
                                         <div>
-                                            <button type="button" class="theme-button-small graydient-primary-btn">
+                                            <button type="button" class="theme-btn graydient-primary-btn">
                                                 View Tasks
                                             </button>
                                         </div>
