--- a/backend/index.html
+++ b/backend/index.html
@@ -257,7 +257,7 @@
                     </tr>
                     <tr>
                       <td>Advance Configuration</td>
-                      <td><a href="../advance-config.html">Html</a></td>
+                      <td><a href="advance-config.html">Html</a></td>
 
                       <td><a href="https://invis.io/X3WVS9PHC8G#/424724837_Connectors_-_Connector_Settings"
                           target="_blank">Design</a>
